--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,14 @@
 //  *= require_tree .
 //  *= require_self
 //  */
-@import "bootstrap-sprockets";
-@import "bootstrap";
+@import "colors";
+@import 'https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700';
+@import url('https://fonts.googleapis.com/css?family=Dosis:400,700');
+@import url('https://fonts.googleapis.com/css?family=Oswald:400,700');
+@import "font-awesome";
+@import "footer";
+@import "header";
+@import "welcome";
+@import 'bootstrap';
 @require "self";
 @require "tree .";
