--- a/app/views/applicants/_form.html.haml
+++ b/app/views/applicants/_form.html.haml
@@ -8,10 +8,10 @@
 
   .field
     = f.label :firstname
-    = f.text_area :firstname
+    = f.text_field :firstname
   .field
     = f.label :lastname
-    = f.text_area :lastname
+    = f.text_field :lastname
   .field
     = f.label :telephone
     = f.text_field :telephone
