--- a/app/views/applicants/new.html.haml
+++ b/app/views/applicants/new.html.haml
@@ -1,5 +1,6 @@
-%h1 New applicant
+.container
+  %h1 New applicant
 
-= render 'form'
+  = render 'form'
 
-= link_to 'Back', applicants_path
+  = link_to 'Back', applicants_path
