--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,6 +1,6 @@
 %footer{:style => "background-color:#263137;", :bottom => "0px"}
   .container{:align => "center", :bottom => "0px"}
-    .row
+    -# .row
       -# .col-lg-3
       -#   %h5 Akridge LLC.
       -# .col-lg-3
@@ -15,19 +15,19 @@
       -#     =link_to "Contact", nil, class: "footerLink"
 
 
-      .col-lg-3
-        -# %h5{:style => "color:#9d9d9d;"} Contact
-        %p{:style => "color:#9d9d9d;"}
-          Akridge LLC.
-          %br>/
-          Main Street
-          %br>/
-          123 Zoz Ave.
-          %br>/
-          Warner Robins, GA 31088
-          %br/
-          %i.fa.fa-phone{"aria-hidden" => "true"}
-          478.123.4567
+    .col-lg-3
+      -# %h5{:style => "color:#9d9d9d;"} Contact
+      %p{:style => "color:#9d9d9d;"}
+        Akridge LLC.
+        %br>/
+        Main Street
+        %br>/
+        123 Zoz Ave.
+        %br>/
+        Warner Robins, GA 31088
+        %br/
+        %i.fa.fa-phone{"aria-hidden" => "true"}
+        478.123.4567
     %p{:style => "color: #9d9d9d"}  
     .container
       .row
