--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,2 +1,10 @@
-.container
-  zoz
+.background-image-wrapper
+  .container
+    .row
+      .col-md-12
+        .welcome-block
+          %h2 Welcome to
+          %hr{ :style => "background-color: #8D99B8;"}
+          %h1 Akridge Interprises
+          -# %p Thank-you for visiting our page. Please browse our properties,
+          -# %p and feel free to contact us at any time.
