--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -20,16 +20,16 @@
               = link_to 'Apply', new_applicant_path, :class => 'nav-link'
             %li.nav-item
               = link_to 'Contact', contact_path, :class => 'nav-link'
-            -# - if user_signed_in?
-            -#   %li.nav-item.active
-            -#     %a#side-menu.nav-link{:href => "#sidr", :style => "font-size:2.6rem;margin-top:-14px;"}
-            -#       %i.fa.fa-user-circle{"aria-hidden" => "true"}
-            -#       %i.fa.fa-times-circle{"aria-hidden" => "true", :style => "display:none"}
-            -#   %li.nav-item.login-btn
-            -#     = link_to('Logout', destroy_user_session_path, :method => :delete, :class => 'btn btn-login')
-            -# - else
-            -#   %li.nav-item.login-btn
-            -#     = link_to 'Login/Sign Up', new_user_session_path, :class => 'btn btn-login'
+            - if logged_in?
+              -# %li.nav-item.active
+              -#   %a#side-menu.nav-link{:href => "#sidr", :style => "font-size:2.6rem;margin-top:-14px;"}
+              -#     %i.fa.fa-user-circle{"aria-hidden" => "true"}
+              -#     %i.fa.fa-times-circle{"aria-hidden" => "true", :style => "display:none"}
+              %li.nav-item.login-btn
+                = link_to('Logout', logout_path, :method => :delete, :class => 'btn btn-login')
+            - else
+              %li.nav-item.login-btn
+                = link_to 'Login', login_path, :class => 'btn btn-login'
 
 -# %nav.navbar.navbar-default.navbar-inverse.topnav{:style => "background-color:#263137;"}
 -#   .container
