--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -13,7 +13,7 @@
             %li.nav-item
               = link_to 'Home', root_url, :class => 'nav-link'
             %li.nav-item
-              =link_to 'Properties', nil, :class => 'nav-link'
+              =link_to 'Properties', properties_path, :class => 'nav-link'
             %li.nav-item
               = link_to 'About', about_path, :class => 'nav-link'
             %li.nav-item
