--- a/app/assets/stylesheets/applicants.scss
+++ b/app/assets/stylesheets/applicants.scss
@@ -4,3 +4,17 @@
 th{
   padding: 5px;
 }
+.field{
+  table-layout: auto;
+  text-align: center;
+  width: 100%;
+}
+input{
+  width: 30%;
+}
+label{
+  color: #ffffff;
+}
+.actions{
+  text-align: center;
+}
