--- a/app/views/applicants/new.html.haml
+++ b/app/views/applicants/new.html.haml
@@ -1,6 +1,6 @@
-.container
-  %h1 New applicant
-
-  = render 'form'
-
-  = link_to 'Back', applicants_path
+.background-image-wrapper
+  .container
+    .welcome-block
+      %h1 New applicant
+      .container-fluid
+        = render 'form'
