--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -21,6 +21,8 @@
             %li.nav-item
               = link_to 'Contact', contact_path, :class => 'nav-link'
             - if logged_in?
+              %li.nav-item
+                = link_to 'Admin', option_path, :class => 'nav-link'
               -# %li.nav-item.active
               -#   %a#side-menu.nav-link{:href => "#sidr", :style => "font-size:2.6rem;margin-top:-14px;"}
               -#     %i.fa.fa-user-circle{"aria-hidden" => "true"}
@@ -31,56 +33,56 @@
               %li.nav-item.login-btn
                 = link_to 'Login', login_path, :class => 'btn btn-login'
 
--# %nav.navbar.navbar-default.navbar-inverse.topnav{:style => "background-color:#263137;"}
--#   .container
--#     .navbar-header
--#       %button.navbar-toggle.collapsed{"aria-expanded" => "false", "data-target" => "#bs-example-navbar-collapse-1", "data-toggle" => "collapse", :type => "button"}
--#         %span.sr-only Toggle navigation
--#         %span.icon-bar
--#         %span.icon-bar
--#         %span.icon-bar
--#
--#       -# = link_to image_tag('logo.png'), root_path, class: "imglink"
--#       -# = link_to image_tag('logo.png'), root_path, class: "imglink"
--#
--#       #bs-example-navbar-collapse-1.collapse.navbar-collapse
--#         %ul.nav.navbar-nav.navbar-right
--#           %li
--#             =link_to "Home", root_path
--#
--#           %li
--#             =link_to "Properties", nil
--#
--#           %li
--#             =link_to "Apply", new_applicant_path
--#
--#           %li
--#             =link_to "About", about_path
--#
--#           %li
--#             =link_to "Contact", contact_path
--#
--#           -# %li.dropdown
--#           -#   %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
--#           -#     Search Categories
--#           -#     %span.caret
--#           -#   %ul.dropdown-menu
--#           -#     %li
--#           -#       =link_to "Option 1", #
--#           -#
--#           -#     %li
--#           -#       =link_to "Option 2", #
--#           -#
--#           -#     %li
--#           -#       =link_to "Option 3", #
--#
--#           -# %li
--#           -#   - if logged_in?
--#           -#     =link_to "Profile", profile_path
--#
--#           -# %li
--#           -#   - if logged_in?
--#           -#     =link_to "Log Out", sign_out_path
--#           -#
--#           -#   - if !logged_in?
--#           -#     =link_to "Sign in", signin_path
+  -# %nav.navbar.navbar-default.topnav.aims-navbar
+  -#   .container
+  -#     .navbar-header
+  -#       %button.navbar-toggle.collapsed{"aria-expanded" => "false", "data-target" => "#bs-example-navbar-collapse-1", "data-toggle" => "collapse", :type => "button"}
+  -#         %span.sr-only Toggle navigation
+  -#         %span.icon-bar
+  -#         %span.icon-bar
+  -#         %span.icon-bar
+  -#
+  -#       -# = link_to image_tag('logo.png'), root_path, class: "imglink"
+  -#       -# = link_to image_tag('logo.png'), root_path, class: "imglink"
+  -#
+  -#       #bs-example-navbar-collapse-1.collapse.navbar-collapse
+  -#         %ul.nav.navbar-nav.navbar-right
+  -#           %li
+  -#             =link_to "Home", root_path
+  -#
+  -#           %li
+  -#             =link_to "Properties", nil
+  -#
+  -#           %li
+  -#             =link_to "Apply", new_applicant_path
+  -#
+  -#           %li
+  -#             =link_to "About", about_path
+  -#
+  -#           %li
+  -#             =link_to "Contact", contact_path
+
+            -# %li.dropdown
+            -#   %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
+            -#     Search Categories
+            -#     %span.caret
+            -#   %ul.dropdown-menu
+            -#     %li
+            -#       =link_to "Option 1", #
+            -#
+            -#     %li
+            -#       =link_to "Option 2", #
+            -#
+            -#     %li
+            -#       =link_to "Option 3", #
+
+            -# %li
+            -#   - if logged_in?
+            -#     =link_to "Profile", profile_path
+
+            -# %li
+            -#   - if logged_in?
+            -#     =link_to "Log Out", sign_out_path
+            -#
+            -#   - if !logged_in?
+            -#     =link_to "Sign in", signin_path
