--- a/app/views/properties/index.html.haml
+++ b/app/views/properties/index.html.haml
@@ -1,13 +1,13 @@
 .background-image-wrapper
-  .container
+  .welcome-block
     %h1 Listing properties
-    - @properties.each do |property|
+    - @properties.each.with_index do |property, index|
       .container.properties-block
         %h2
           =property.address
         .row
           .col-xs-6.col-sm-6.col-md-6.col-lg-6
-            .carousel.slide{:id=>"slide-images", :data => {:ride => "carousel"}}
+            .carousel.slide{:id=>"slide-images"+index.to_s, :data => {:ride => "carousel"}}
               .carousel-inner
                 -property.property_attachments.each do |pic|
                   -if pic == property.property_attachments.first
@@ -17,9 +17,9 @@
                   -else
                     .item
                       = image_tag(pic.avatar_url)
-              %a.left.carousel-control{:href => "#slide-images", :data => {:slide => "prev"}}
+              %a.left.carousel-control{:href => "#slide-images"+index.to_s, :data => {:slide => "prev"}}
                 %span.glyphicon.glyphicon-chevron-left
-              %a.right.carousel-control{:href => "#slide-images", :data => {:slide => "next"}}
+              %a.right.carousel-control{:href => "#slide-images"+index.to_s, :data => {:slide => "next"}}
                 %span.glyphicon.glyphicon-chevron-right
             -# = image_tag asset_path(property.property_attachments[0].avatar_url.to_s), :class => "img-responsive img-custom"
           .col-xs-6.col-sm-6.col-md-6.col-lg-6
@@ -41,9 +41,3 @@
     -#       %span.glyphicon.glyphicon-chevron-left
     -#     %a.right.carousel-control{:href => "#slide-images", :data => {:slide => "next"}}
     -#       %span.glyphicon.glyphicon-chevron-right
-
-
-
-%br
-
-= link_to 'New Property', new_property_path
