--- a/app/views/properties/show.html.haml
+++ b/app/views/properties/show.html.haml
@@ -1,16 +1,23 @@
-%p#notice= notice
+-# .welcome-block
+.container
+  %p#notice= notice
 
-%p
-  %b Address:
-  = @property.address
-%p
-  %b Description:
-  = @property.description
+  %p
+    %b Address:
+    = @property.address
+  %p
+    %b Description:
+    = @property.description
 
-- @property_attachments.each do |p|
-  = image_tag p.avatar_url
-  = link_to "Edit Attachment", edit_property_attachment_path(p)
-
-= link_to 'Edit', edit_property_path(@property)
-\|
-= link_to 'Back', properties_path
+  - @property_attachments.each do |p|
+    .row
+      .col-xs-6.col-sm-6.col-md-6.col-lg-6
+        = link_to "Edit Attachment", edit_property_attachment_path(p), :class => "btn btn-warning"
+        = link_to "Delete Attachment", destroy_att_path(:id => p.id), :class => "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' }
+      .col-xs-6.col-sm-6.col-md-6.col-lg-6
+        = image_tag p.avatar_url, :class => "img-responsive"
+    %br
+  %br
+  = link_to 'Edit', edit_property_path(@property), :class => "btn btn-primary"
+  = link_to 'Destroy', destroy_prop_path(:id => @property.id), :class => "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' }
+  = link_to 'Back', properties_path, :class => "btn btn-primary"
