--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -5,6 +5,17 @@
 .menu-separator {
   padding: 30px 0;
 }
+.custom-head{
+  img:hover, .navbar-brand{
+    background: white !important;
+  }
+  a {
+    text-transform: uppercase;
+    font-weight: bolder;
+    font-family: 'Dosis', sans-serif;
+    font-size: 20px;
+  }
+}
 .aims-navbar {
   box-shadow: none;
   border-radius: 0;
