--- a/app/views/properties/edit.html.haml
+++ b/app/views/properties/edit.html.haml
@@ -1,7 +1,10 @@
-%h1 Editing property
+.background-image-wrapper
+  .welcome-block
+    .container
+      %h1 Editing property
 
-= render 'form'
+      = render 'form'
 
-= link_to 'Show', @property
-\|
-= link_to 'Back', properties_path
+      = link_to 'Show', @property, :class => "btn btn-primary", :style => "color:#ffffff"
+      \|
+      = link_to 'Back', properties_path, :class => "btn btn-primary", :style => "color:#ffffff"
