--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -16,6 +16,10 @@
     font-size: 20px;
   }
 }
+.custom-logo{
+  max-width: 200px;
+  height: auto;
+}
 .aims-navbar {
   box-shadow: none;
   border-radius: 0;
