--- a/app/views/welcome/about.html.haml
+++ b/app/views/welcome/about.html.haml
@@ -1,2 +1,5 @@
-.container
-  TO-DO: about
+.background-image-wrapper
+  .container.welcome-block.text-center
+    %h1 About:
+    -# %h4{:style => "color:#ffffff"}
+    %h2 Akridge Enterprises LLC is a family rental company formed in 2016. The organization seeks to provide tenants with high quality homes and an enjoyable experience. We look forward to serving you.
