--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -4,7 +4,7 @@
   .form-inputs
     = f.input :username
     = f.input :password
-    = f.input :email
+    = f.input :email, :label => "Email____"
 
   .form-actions
     = f.button :submit
