--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,25 +1,28 @@
-%h1 Listing users
+.background-image-wrapper
+  .welcome-block
+    .container
+      %h1 Listing users
+      .container{:style => "overflow:auto; background: #ffffff"}
+        %table.table-responsive.table-striped{:style => "background:#ffffff"}
+          %thead
+            %tr
+              %th{:style => "padding-right:10px;"} Username
+              %th{:style => "padding-right:10px;"} Password
+              %th{:style => "padding-right:10px;"} Email
+              %th{:style => "padding-right:10px;"}
+              %th{:style => "padding-right:10px;"}
+              %th{:style => "padding-right:10px;"}
 
-%table
-  %thead
-    %tr
-      %th Username
-      %th Password
-      %th Email
-      %th
-      %th
-      %th
+          %tbody
+            - @users.each do |user|
+              %tr
+                %td= user.username
+                %td= user.password
+                %td= user.email
+                %td= link_to 'Show', user, :class => "btn btn-primary", :style => "color:#ffffff"
+                %td= link_to 'Edit', edit_user_path(user), :class => "btn btn-warning", :style => "color:#ffffff"
+                %td= link_to 'Destroy', user, :method => :delete, :data => { :confirm => 'Are you sure?' }, :class => "btn btn-danger", :style => "color:#ffffff"
 
-  %tbody
-    - @users.each do |user|
-      %tr
-        %td= user.username
-        %td= user.password
-        %td= user.email
-        %td= link_to 'Show', user
-        %td= link_to 'Edit', edit_user_path(user)
-        %td= link_to 'Destroy', user, :method => :delete, :data => { :confirm => 'Are you sure?' }
+      %br
 
-%br
-
-= link_to 'New User', new_user_path
+      = link_to 'New User', new_user_path, :class => "btn btn-primary", :style => "color:#ffffff"
