--- a/app/views/applicants/edit.html.haml
+++ b/app/views/applicants/edit.html.haml
@@ -1,7 +1,10 @@
-%h1 Editing applicant
+.background-image-wrapper
+  .welcome-block
+    .container{:style => "text-align:center"}
+      %h1 Editing applicant
 
-= render 'form'
+      = render 'form'
 
-= link_to 'Show', @applicant
-\|
-= link_to 'Back', applicants_path
+      = link_to 'Show', @applicant, :class => "btn btn-primary", :style => "color:#ffffff"
+      \|
+      = link_to 'Back', applicants_path, :class => "btn btn-primary", :style => "color:#ffffff"
