--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,7 +1,10 @@
-%h1 Editing user
+.background-image-wrapper
+  .welcome-block
+    .container{:style => "text-align:center"}
+      %h1 Editing user
 
-= render 'form'
+      = render 'form'
 
-= link_to 'Show', @user
-\|
-= link_to 'Back', users_path
+      = link_to 'Show', @user, :class => "btn btn-primary", :style => "color:#ffffff"
+      \|
+      = link_to 'Back', users_path, :class => "btn btn-primary", :style => "color:#ffffff"
