--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,5 +1,8 @@
-%h1 New user
+.background-image-wrapper
+  .welcome-block
+    .container{:style => "text-align:center"}
+      %h1 New user
 
-= render 'form'
+      = render 'form'
 
-= link_to 'Back', users_path
+      = link_to 'Back', users_path, :class => "btn btn-primary", :style => "color:#ffffff"
