--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -5,6 +5,6 @@
         .welcome-block
           %h2 Welcome to
           %hr{ :style => "background-color: #8D99B8;"}
-          %h1 Akridge Interprises
+          %h1 Akridge Enterprises
           -# %p Thank-you for visiting our page. Please browse our properties,
           -# %p and feel free to contact us at any time.
